# SharePoint-Integrations

./: .gitignore  README.md  drive_documents.json  main.py  pyproject.toml
auth/: msal_auth.py
config/: settings.py
downloads/: - Master Services Agreement.docx
services/: drive_id.py  fetch_drive_docs.py  fetch_specific_drive.py  file_service.py  list_drives.py  site_id.py
